프로필 사진 변경

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 border : 2px solid white; /* 원 밖 테두리 '굵기', '실선', '색상' */
 
-                background-image: url('김윤찬.png'); /* 파일명 */
+                background-image: url('김윤찬2.png'); /* 파일명 */
                 background-position: center; /* 포지션 */
                 background-size: cover; /* 사이즈 */
                 /* 다 만들고 백그라운드 컬러 지우기 */
